# parsedmarc-fork

./: .gitignore  Dockerfile  NOTICE  README.md  mkdocs.yml  mypy.ini  pylintrc  pyproject.toml  tests.py
.github/workflows/: python-tests.yml
docs/: davmail.md  dmarc.md  elasticsearch.md  index.md  installation.md  kibana.md  mailing-lists.md  splunk.md  usage.md
src/parsedmarc/: __init__.py  application.py  cli.py  const.py  elastic.py  kafkaclient.py  loganalytics.py  parser.py  report.py  reports.py  s3.py  splunk.py  syslog.py  utils.py
src/parsedmarc/mail/: gmail.py  graph.py  imap.py  mailbox_connection.py
src/parsedmarc/sink/: base.py  elasticsearch.py  util.py
src/parsedmarc/source/: aws.py  base.py  email.py  file.py  util.py
tests/: test_parsing.py  test_utils.py
